Add partials for JS files

--- a/resume.template
+++ b/resume.template
@@ -5,8 +5,10 @@
   <meta name="viewport" content="user-scalable=yes, width=device-width, initial-scale=1, minimal-ui">
   <title>{{resume.basics.name}}{{#if resume.basics.label}} — {{resume.basics.label}}{{/if}}</title>
 
-  <style>{{> webfonts}}</style>
-  <style>{{> style}}</style>
+  <style>
+    {{> webfonts}}
+    {{> style}}
+  </style>
 
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
@@ -438,6 +440,15 @@
 	{{/if}}
 
 	</div>
+
+  <a href="#" data-scroll>Go to top</a>
+
+  <script>
+    {{> domReady}}
+    {{> FastClick}}
+    {{> smoothScroll}}
+    {{> script}}
+  </script>
 
 	</body>
 </html>
