--- a/.jshintrc
+++ b/.jshintrc
@@ -40,7 +40,7 @@
   "supernew"      : false,
   "validthis"     : false,
 
-  "browser"       : false,
+  "browser"       : true,
   "couch"         : false,
   "devel"         : false,
   "dojo"          : false,
