--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
   ],
   "dependencies": {
     "csso": "^1.3.11",
+    "domready": "^1.0.7",
+    "fastclick": "^1.0.3",
     "handlebars": "^2.0.0",
-    "moment": "^2.8.4"
+    "moment": "^2.8.4",
+    "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll",
+    "uglify-js": "^2.4.16"
   },
   "devDependencies": {
     "bootstrap": "^3.3.1",
