--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
   },
   "devDependencies": {
     "bootstrap": "^3.3.1",
+    "browser-sync": "^1.8.2",
     "font-awesome": "^4.2.0",
     "jshint": "^2.5.6",
     "jshint-stylish": "^1.0.0",
     "lodash": "^2.4.1",
+    "nodemon": "^1.2.1",
     "resume-cli": "^0.3.11",
+    "resume-schema": "0.0.15",
     "webfont-dl": "^0.1.1"
   },
   "scripts": {
-    "start": "resume serve",
+    "start": "nodemon server.js -w lib -w assets -e js,css",
     "test": "echo 'not implemented yet' && exit 0",
     "lint": "jshint --reporter node_modules/jshint-stylish/stylish.js index.js",
     "webfonts": "webfont-dl 'https://fonts.googleapis.com/css?family=Lato:400' -o assets/styles/webfonts.css --woff1=data --woff2=omit --svg=omit --ttf=omit --eot=omit"
