--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "curriculum"
   ],
   "dependencies": {
+    "autoprefixer-core": "^4.0.2",
     "csso": "^1.3.11",
+    "bootstrap": "^3.3.1",
+    "font-awesome": "^4.2.0",
+    "lodash": "^2.4.1",
     "domready": "^1.0.7",
     "fastclick": "^1.0.3",
     "handlebars": "^2.0.0",
@@ -32,12 +36,9 @@
     "uglify-js": "^2.4.16"
   },
   "devDependencies": {
-    "bootstrap": "^3.3.1",
     "browser-sync": "^1.8.2",
-    "font-awesome": "^4.2.0",
     "jshint": "^2.5.6",
     "jshint-stylish": "^1.0.0",
-    "lodash": "^2.4.1",
     "nodemon": "^1.2.1",
     "resume-cli": "^0.3.11",
     "resume-schema": "0.0.15",
