--- a/resume.template
+++ b/resume.template
@@ -82,12 +82,6 @@
                 <span class="info"><a href="{{website}}" rel="author" target="_blank" itemprop="url">{{sanitizeURL website}}</a></span>
               </li>
             {{/if}}
-            {{#if languages}}
-              <li class="basics-item">
-                <span class="icon" title="Languages I speak"><i class="fa fa-lg fa-language"></i></span>
-                <span class="info">{{languages}}</span>
-              </li>
-            {{/if}}
           </ul>
 
           <hr>
@@ -136,7 +130,7 @@
               </h4>
 
               <div class="content" itemprop="description">
-                {{resume.basics.summary}}
+                {{nl2br resume.basics.summary}}
               </div>
             </div>
           </div>
@@ -161,9 +155,9 @@
                       <p class="text-muted visible-xs visible-sm">
                         <small>
                           <span class="space-right">
-                            {{startDate}} -
+                            {{formatMMMMYYYY startDate}} -
                             {{#if endDate}}
-                              {{endDate}}
+                              {{formatMMMMYYYY endDate}}
                             {{else}}
                               Present
                             {{/if}}
@@ -191,13 +185,13 @@
                       {{#if startDate}}
                         <p>
                           <strong>Joined:</strong>&nbsp;
-                          {{startDate}}
+                          {{formatMMMMYYYY startDate}}
                         </p>
 
                         <p>
                           {{#if endDate}}
                             <strong>Left:</strong>&nbsp;
-                            {{endDate}}
+                            {{formatMMMMYYYY endDate}}
                           {{else}}
                             <span class="label label-success">
                               Currently Working
@@ -275,9 +269,9 @@
                         </p>
                         <p class="visible-xs visible-sm text-muted">
                           <small>
-                            {{startDate}} -
+                            {{formatYYYY startDate}} -
                             {{#if endDate}}
-                              {{endDate}}
+                              {{formatYYYY endDate}}
                             {{else}}
                               Present
                             {{/if}}
@@ -293,12 +287,12 @@
                       <div class="sidebar text-muted text-center hidden-xs hidden-sm">
                         <p>
                           <strong>Started:</strong>&nbsp;
-                          {{startDate}}
+                          {{formatYYYY startDate}}
                         </p>
                         <p>
                           {{#if endDate}}
                             <strong>Completion:</strong>&nbsp;
-                            {{endDate}}
+                            {{formatYYYY endDate}}
                           {{else}}
                             <span class="label label-success">
                               Currently Pursuing
@@ -335,7 +329,7 @@
                           </p>
                           <p class="visible-xs visible-sm text-muted">
                             <small>
-                              Awarded on: {{date}}
+                              Awarded on: {{formatMMMDDYYYY date}}
                             </small>
                           </p>
                           <p class="clear-margin"> {{summary}} </p>
@@ -343,7 +337,7 @@
                         <div class="sidebar text-muted text-center hidden-xs hidden-sm">
                           <p>
                             <strong>Awarded on:</strong>&nbsp;
-                            {{date}}
+                            {{formatMMMDDYYYY date}}
                           </p>
                         </div>
                       </li>
@@ -376,9 +370,9 @@
                           </p>
                           <p class="visible-xs visible-sm text-muted">
                             <small>
-                              {{startDate}} -
+                              {{formatMMMMYYYY startDate}} -
                               {{#if endDate}}
-                                {{endDate}}
+                                {{formatMMMMYYYY endDate}}
                               {{else}}
                                 Present
                               {{/if}}
@@ -394,12 +388,12 @@
                         <div class="sidebar hidden-xs hidden-sm text-muted text-center">
                           <p>
                             <strong>Since:</strong>&nbsp;
-                            {{startDate}}
+                            {{formatMMMMYYYY startDate}}
                           </p>
                           <p>
                             {{#if endDate}}
                               <strong>Until:</strong>&nbsp;
-                              {{endDate}}
+                              {{formatMMMMYYYY endDate}}
                             {{else}}
                               <span class="label label-success">
                                 Currently Volunteering
@@ -443,7 +437,7 @@
                           </p>
                           <p class="visible-xs visible-sm text-muted">
                             <small>
-                              Published on: {{releaseDate}}
+                              Published on: {{formatMMMDDYYYY releaseDate}}
                             </small>
                           </p>
                           <p class="clear-margin">{{summary}}</p>
@@ -451,7 +445,7 @@
                         <div class="sidebar text-muted text-center hidden-sm hidden-xs">
                           <p>
                             <strong>Published on:</strong>&nbsp;
-                            {{releaseDate}}
+                            {{formatMMMDDYYYY releaseDate}}
                           </p>
                         </div>
                       </li>
