--- a/resume.template
+++ b/resume.template
@@ -37,7 +37,7 @@
 </head>
 <body class="container-fluid" itemscope itemtype="http://schema.org/Person" role="document">
   <div class="row">
-    <section id="profile" class="col-md-3 card-wrapper profile-card-wrapper">
+    <section id="profile" class="col-md-3 card-wrapper profile-card-wrapper affixTODO">
       <div class="card">
         {{#resume.basics}}
           <img class="profile-pic media-object img-circle center-block" src="{{picture}}" alt="128x128" width="128" height="128" itemprop="image">
@@ -92,26 +92,13 @@
 
           <hr>
 
-          <div class="social-links text-center">
-            {{#if linkedin_url}}<a class="fa fa-linkedin fa-2x social-link link-linkedin" href="{{linkedin_url}}" target="_blank"></a>{{/if}}
-            {{#if github_url}}<a class="fa fa-github fa-2x social-link link-github" href="{{github_url}}" target="_blank"></a>{{/if}}
-            {{#if bitbucket_url}}<a class="fa fa-bitbucket fa-2x social-link link-bitbucket" href="{{bitbucket_url}}" target="_blank"></a>{{/if}}
-            {{#if stackoverflow_url}}<a class="fa fa-stack-overflow fa-2x social-link link-stackoverflow" href="{{stackoverflow_url}}" target="_blank"></a>{{/if}}
-            {{#if codepen_url}}<a class="fa fa-codepen fa-2x social-link link-codepen" href="{{codepen_url}}" target="_blank"></a>{{/if}}
-            {{#if skype_url}}<a class="fa fa-skype fa-2x social-link link-skype" href="{{skype_url}}" target="_blank"></a>{{/if}}
-            {{#if twitter_url}}<a class="fa fa-twitter fa-2x social-link link-twitter" href="{{twitter_url}}" target="_blank"></a>{{/if}}
-            {{#if facebook_url}}<a class="fa fa-facebook-square fa-2x social-link link-facebook" href="{{facebook_url}}" target="_blank"></a>{{/if}}
-            {{#if soundcloud_url}}<a class="fa fa-soundcloud fa-2x social-link link-soundcloud" href="{{soundcloud_url}}" target="_blank"></a>{{/if}}
-            {{#if pinterest_url}}<a class="fa fa-pinterest fa-2x social-link link-pinterest" href="{{pinterest_url}}" target="_blank"></a>{{/if}}
-            {{#if vimeo_url}}<a class="fa fa-vimeo-square fa-2x social-link link-vimeo" href="{{vimeo_url}}" target="_blank"></a>{{/if}}
-            {{#if behance_url}}<a class="fa fa-behance fa-2x social-link link-behance" href="{{behance_url}}" target="_blank"></a>{{/if}}
-            {{#if foursquare_url}}<a class="fa fa-foursquare fa-2x social-link link-foursquare" href="{{foursquare_url}}" target="_blank"></a>{{/if}}
-            {{#if reddit_url}}<a class="fa fa-reddit fa-2x social-link link-reddit" href="{{reddit_url}}" target="_blank"></a>{{/if}}
-            {{#if spotify_url}}<a class="fa fa-spotify fa-2x social-link link-spotify" href="{{spotify_url}}" target="_blank"></a>{{/if}}
-            {{#if dribble_url}}<a class="fa fa-dribble fa-2x social-link link-dribbble" href="{{dribble_url}}" target="_blank"></a>{{/if}}
-            {{#if dribbble_url}}<a class="fa fa-dribbble fa-2x social-link link-dribbble" href="{{dribbble_url}}" target="_blank"></a>{{/if}}
-            {{#if angellist_url}}<a class="fa fa-angellist fa-2x social-link link-angellist" href="{{angellist_url}}" target="_blank"></a>{{/if}}
-          </div>
+          {{#if profiles}}
+            <ul class="social-profiles nav nav-justified">
+              {{#each profiles}}
+                <li class="profile-item"><a href="{{url}}" target="_blank"><i class="fa fa-2x {{networkIcon network}}"></i></a></li>
+              {{/each}}
+            </ul>
+          {{/if}}
         {{/resume.basics}}
       </div>
     </section>
