--- a/resume.template
+++ b/resume.template
@@ -9,8 +9,10 @@
     {{> webfonts}}
     {{> fontAwesome}}
     {{> bootstrap}}
-    {{> style}}
+    {{> global}}
+    {{> card}}
     {{> profile}}
+    {{> style}}
     {{> print}}
   </style>
 
@@ -44,7 +46,7 @@
             <img class="profile-pic media-object img-circle center-block" src="{{picture}}" alt="128x128" width="128" height="128" itemprop="image">
           {{/if}}
 
-          <h1 class="text-center text-bolder" itemprop="name">{{name}}</h1>
+          <h1 class="text-center" itemprop="name">{{name}}</h1>
           {{#if label}}
             <h2 class="text-center text-muted" itemprop="jobTitle">{{label}}</h2>
           {{/if}}
@@ -55,7 +57,7 @@
             {{#if phone}}
               <li class="basics-item">
                 <a href="tel:{{sanitizePhone phone}}">
-                  <span class="icon"><i class="fa fa-lg fa-phone"></i></span>
+                  <span class="icon text-muted"><i class="fa fa-lg fa-phone"></i></span>
                   <span class="info" itemprop="telephone">{{phone}}</span>
                 </a>
               </li>
@@ -64,7 +66,7 @@
               <li class="basics-item">
                 {{#location}}
                   <a href="{{mapURL this}}" target="_blank" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                    <span class="icon"><i class="fa fa-lg fa-location-arrow"></i></span>
+                    <span class="icon text-muted"><i class="fa fa-lg fa-location-arrow"></i></span>
                     <span class="info">
                       <span itemprop="streetAddress">{{#if address}}{{address}},{{/if}}</span>
                       <span itemprop="addressLocality">{{#if city}}{{city}},{{/if}}</span>
@@ -79,7 +81,7 @@
             {{#if email}}
               <li class="basics-item">
                 <a href="mailto:{{email}}">
-                  <span class="icon"><i class="fa fa-lg fa-envelope"></i></span>
+                  <span class="icon text-muted"><i class="fa fa-lg fa-envelope"></i></span>
                   <span class="info" itemprop="email">{{email}}</span>
                 </a>
               </li>
@@ -87,7 +89,7 @@
             {{#if website}}
               <li class="basics-item">
                 <a href="{{website}}" rel="author" target="_blank" itemprop="url">
-                  <span class="icon"><i class="fa fa-lg fa-link"></i></span>
+                  <span class="icon text-muted"><i class="fa fa-lg fa-link"></i></span>
                   <span class="info">{{sanitizeURL website}}</span>
                 </a>
               </li>
